cmake_minimum_required(VERSION 3.29)
project(JiSuanSiWeiDaolun)

set(CMAKE_CXX_STANDARD 11)



add_executable(4.7.3helloworld 4.7.3helloworld.c)
add_executable(4.7.4xuehao 4.7.4xuehao.c)
add_executable(5.1eg 5.1eg.c)
add_executable(5.2eg 5.2eg.c)
add_executable(5.1.3 5.1.3.c)
add_executable(5.3eg 5.3eg.c)
add_executable(5.4eg 5.4eg.c)
add_executable(5.5eg 5.5eg.c)
add_executable(5.6eg 5.6eg.c)
add_executable(5.7eg 5.7eg.c)
add_executable(5.8eg 5.8eg.c)
add_executable(5.5.5ab 5.5.5ab.c)
add_executable(5.5.6yuan 5.5.6yuan.c)
add_executable(5.5.7as 5.5.7as.c)
add_executable(5.5.8as 5.5.8as.c)
add_executable(5.5.9as 5.5.9as.c)
add_executable(6.1eg 6.1eg.c)
add_executable(6.2eg 6.2eg.c)
add_executable(6.3eg 6.3eg.c)
add_executable(6.4eg 6.4eg.c)
add_executable(6.5eg 6.5eg.c)
add_executable(6.6eg 6.6eg.c)
add_executable(6.7eg 6.7eg.c)
add_executable(6.4changjing1 6.4changjing1.c)
add_executable(6.4changjing2 6.4changjing2.c)
add_executable(6.4changqing3 6.4changqing3.c)
add_executable(6.6.1as 6.6.1as.c)
add_executable(6.6.2as 6.6.2as.c)
add_executable(6.6.3as 6.6.3as.c)
add_executable(6.6.4 6.6.4as.c)
add_executable(6.6.5as 6.6.5as.c)
add_executable(6.6.6as 6.6.6as.c)
add_executable(8.4eg 8.4eg.c)
add_executable(8.6.1as 8.6.1as.c)
add_executable(8.6.3as 8.6.3as.c)

add_executable(6.6.7.1as 6.6.7.1as.c)
add_executable(6.6.7.2as 6.6.7.2as.c)
add_executable(6.6.7.3as 6.6.7.3as.c)
add_executable(8.6.4as 8.6.4as.c)
add_executable(8.6.5sa 8.6.5sa.c)
add_executable(8.6.6as 8.6.6as.c)
add_executable(9.1eg 9.1eg.c)
add_executable(9.2eg 9.2eg.c)
add_executable(9.3eg 9.3eg.c)
add_executable(9.4eg 9.4eg.c)
add_executable(9.4.1 9.4.1.c)
add_executable(9.5.1eg 9.5.1eg.c)
add_executable(9.5.2eg 9.5.2eg.c)
add_executable(9.7as 9.7.1as.c)
add_executable(9.7.2as 9.7.2as.c)
add_executable(9.7.3as 9.7.3as.c)
add_executable(9.7.4as 9.7.4as.c)
add_executable(9.7.5as 9.7.5as.c)
add_executable(9.7.6as 9.7.6as.c)
add_executable(9.7.7as 9.7.7as.c)
add_executable(9.7.8as 9.7.8as.c)
add_executable(10.0eg 10.0eg.c)
add_executable(10.1eg 10.1eg.c)
add_executable(10.2eg 10.2eg.c)
add_executable(10.3eg 10.3eg.c)
add_executable(10.4eg 10.4.1eg.c)
add_executable(10.4.2eg 10.4.2eg.c)
add_executable(10.5eg 10.5eg.c)
add_executable(10.6eg 10.6eg.c)
add_executable(10.7eg 10.7eg.c)
add_executable(10.8eg 10.8eg.c)
add_executable(10.9eg 10.9eg.c)
add_executable(10.10 10.10eg.c)
add_executable(10.8.1as 10.8.1as.c)
add_executable(10.8.2as 10.8.2as.c)
add_executable(10.8.3as 10.8.3as.c)
add_executable(10.8.5as 10.8.5as.c)
add_executable(10.8.6as 10.8.6as.c)
add_executable(10.8.7as 10.8.7as.c)
add_executable(10.8.8as 10.8.8as.c)
add_executable(10.8.9as 10.8.9as.c)
add_executable(10.8.10as 10.8.10as.c)
add_executable(10.8.11as 10.8.11as.c)
add_executable(11.1.3 11.1.3.1eg.c)
add_executable(11.1.3.2eg 11.1.3.2eg.c)
add_executable(11.2.2.1eg 11.2.2.1eg.c)
add_executable(11.2.2.2eg 11.2.2.2eg.c)
add_executable(11.2.3eg 11.2.3eg.c)
add_executable(11.2.3.2eg 11.2.3.2eg.c)
add_executable(11.2.3.3eg 11.2.3.3eg.c)
add_executable(11.2.3.4eg 11.2.3.4eg.c)
add_executable(11.3eg 11.3eg.c)
add_executable(11.4eg 11.4eg.c)
add_executable(11.6as 11.6.1as.c)
add_executable(11.6.2as 11.6.2as.c)
add_executable(11.6.3as 11.6.3as.c)
add_executable(11.6.4as 11.6.4as.c)
add_executable(11.6.5as 11.6.5as.c)
add_executable(11.6.6as 11.6.6as.c)
add_executable(11.6.7as 11.6.7as.c)
add_executable(11.6.8as 11.6.8as.c)
add_executable(12.1.2eg 12.1.2eg.c)
add_executable(12.7.8as 12.7.8as.c)
add_executable(12.7.9as 12.7.9as.c)
add_executable(13.1eg 13.1eg.c)
add_executable(13.2eg 13.2eg.c)
add_executable(13.3eg 13.3eg.c)
add_executable(13.4eg 13.4eg.c)
add_executable(13.5eg 13.5eg.c)
add_executable(13.7.1as 13.7.1as.c)
add_executable(13.7.2as 13.7.2as.c)
add_executable(13.7.3as 13.7.3as.c)
add_executable(13.7.4as 13.7.4as.c)